Material Request Create

--- a/.env.example
+++ b/.env.example
@@ -50,3 +50,5 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+HIS_AUTH_KEY="kkjn1jn5k12nk1jn2512jn31k23jn"
